[package]
name = "bitwasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
serde = "1.0.210"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = { version = "0.4.43", features = ["futures-core"] }
web-sys = { version = "0.3.70", features = ["Window"] }
